# temp_monitoring

./: CMakeLists.txt  display_test.py  partitions.csv  platformio.ini  sdkconfig.defaults  sdkconfig.monitor  spec.md  spec_2.md
.claude/: settings.local.json
.claudecode/: config.json
.devcontainer/: devcontainer.json
docs/: Config_PDF_2026-05-28.json
include/: espnow_packet.h  lgfx_config.h  lgfx_config_monitor.h
pc_app/: build.bat  create_icon.py  installer.iss  main.py  requirements.txt
platform_test/arduino_ide/: arduino_ide.ino
platform_test/pio_arduino/: platformio.ini
platform_test/pio_arduino/boards/: esp32c6_lcd147.json
platform_test/pio_arduino/src/: main.cpp
platform_test/pio_espidf/: CMakeLists.txt  platformio.ini  sdkconfig.defaults
platform_test/pio_espidf/src/: main.cpp
src/: CMakeLists.txt
src/gateway/: main.cpp
src/monitor/: main.cpp
src/node_bottom/: main.cpp
src/node_top/: main.cpp
